--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kurungai",
+  "name": "Thirukkurungudi",
   "version": "1.0.0",
-  "description": "Thirukkurungui Website",
+  "description": "Thirukkurungudi is one of the 108 Vaishnava Divyadesam. The Lord Vadivazhakiya Nambi is positioned in 5 Stages. The Great Kaisika Puranam is held at thirukkurungudi.",
   "author": "Paraga Labs",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/pwa": "^3.0.0-0",
     "axios": "^0.19.0",
     "bootstrap": "^4.1.3",
