--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/cli": "^2.15.3",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.13.0",
     "@nuxtjs/google-adsense": "^1.1.3",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.0.0-0",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "nuxt": "^2.0.0"
-  },
-  "devDependencies": {}
+    "nuxt": "^2.15.3"
+  }
 }
